fix loadingspinner z-index

--- a/src/shared/components/UIElements/LoadingSpinner.css
+++ b/src/shared/components/UIElements/LoadingSpinner.css
@@ -26,6 +26,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 2147483647;
 }
 
 @keyframes lds-dual-ring {
